<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_alcool_gasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcool_gasolina"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/icon_gasolina"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_local_gas_station_24"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/contentDescription" />

    <TextView
        android:id="@+id/opcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melhor_opcao"
        android:textSize="19sp"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="220dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:hint="@string/nome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_txt_preco_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:hint="@string/preco_gasolina"
        android:inputType="numberDecimal" />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_txt_preco_alcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:hint="@string/preco_alcool"
            android:inputType="numberDecimal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:gravity="center"
            android:layout_marginTop="440dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:layout_marginTop="485dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_resultado_gasolina_alcool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nenhuma_opcao"
            android:textColor="@color/red"
            android:visibility="invisible"
            android:layout_marginTop="535dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
</RelativeLayout>